[package]
name = "ytclimp"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
ctrlc = "3.4.2"
crossterm = "0.27.0"
dashmap = "5.5.3"
dialoguer = "0.11.0"
id3 = "1.12.0"
ratatui = { version = "0.26.0", features = ["all-widgets", "termion"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
